# jwt-webserver-aws

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile-app  Dockerfile-db  docker-compose.yml  sqlx-data.json
docker-entrypoint-initdb.d/: Dockerfile
migrations/: 20230424215547_create_products.down.sql  20230424215547_create_products.up.sql  20230424215650_create_customers.down.sql  20230424215650_create_customers.up.sql  20230424215655_create_orders.down.sql  20230424215655_create_orders.up.sql  20230424215708_create_products_in_orders.down.sql  20230424215708_create_products_in_orders.up.sql  20230430135643_create_users.down.sql  20230430135643_create_users.up.sql
src/: app.rs  db_actions.rs  lib.rs  main.rs  middleware.rs  setup.rs
src/controllers/: customer_controller.rs  mod.rs  order_controller.rs  product_controller.rs  user_controller.rs
src/models/: claims.rs  customer.rs  mod.rs  order.rs  params.rs  product.rs  token.rs  user.rs
src/services/: customer_service.rs  mod.rs  order_service.rs  product_service.rs  user_service.rs
tests/: dev.rs
