[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
tokio = { version = "1.22.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "offline"] }
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-trait = "0.1.68"
axum = { version = "0.6.16", features = ["tracing", "headers"] }
serde = { version = "1.0.160", features = ["derive"] }
tower = { version = "0.4.13", features = ["tokio", "timeout"] }
serde_json = "1.0.96"
argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"

[dev-dependencies]
httpc-test = "0.1.1"
reqwest = { version = "0.11.17", features = ["json"] }
